@@ -1,0 +1,63 @@
+<?xml version="1.0"?>
+
+<project name="available-test" basedir="." default="test1">
+
+  <target name="test1">
+    <property name="test" value="original"/>
+    <available file="immutable.xml" property="test" value="override"/>
+  </target>
+  
+  <target name="test2">
+    <tstamp/>
+    <tstamp prefix="start"/>
+  </target>
+
+  <target name="test3">
+    <property name="DSTAMP" value="original"/>
+    <tstamp/>
+  </target>
+
+  <target name="test4">
+    <property name="test" value="original"/>
+    <condition property="test" value="override">
+      <equals arg1="1" arg2="1"/>
+    </condition>
+  </target>
+
+  <target name="test5">
+    <property name="test" value="original"/>
+    <checksum file="immutable.xml" verifyProperty="test"/>
+  </target>
+  
+  <target name="test6">
+    <property name="test1" value="original"/>
+    <property name="test2" value="original"/>
+    <!--  How to make this cross-platform? -->
+    <exec executable="cmd.exe" os="Windows 2000" outputproperty="test1" resultProperty="test2">
+      <arg line="/c dir"/>
+    </exec>
+  </target>
+
+  <target name="test7">
+    <property name="test" value="original"/>
+    <pathconvert targetos="unix" property="test" >
+      <path>
+        <pathelement location="/lib/weblogicaux.jar" />
+        <pathelement location="/classes" />
+        <pathelement location="/mssqlserver4/classes" />
+        <pathelement location="c:\winnt\System32" />
+      </path>
+    </pathconvert>
+  </target>
+
+  <target name="test8">
+    <antcall inheritAll="false" target="echo-target">
+      <param name="echo.value" value="Meep meep!" />
+    </antcall>
+  </target>
+
+  <target name="echo-target">
+    <echo message="Value of echo=${echo.value}"/>
+  </target>
+
+</project>
