@@ -1,0 +1,115 @@
+/*
+ * The Apache Software License, Version 1.1
+ *
+ * Copyright (c) 2000 The Apache Software Foundation.  All rights
+ * reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ *
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in
+ *    the documentation and/or other materials provided with the
+ *    distribution.
+ *
+ * 3. The end-user documentation included with the redistribution, if
+ *    any, must include the following acknowlegement:
+ *       "This product includes software developed by the
+ *        Apache Software Foundation (http://www.apache.org/)."
+ *    Alternately, this acknowlegement may appear in the software itself,
+ *    if and wherever such third-party acknowlegements normally appear.
+ *
+ * 4. The names "The Jakarta Project", "Ant", and "Apache Software
+ *    Foundation" must not be used to endorse or promote products derived
+ *    from this software without prior written permission. For written
+ *    permission, please contact apache@apache.org.
+ *
+ * 5. Products derived from this software may not be called "Apache"
+ *    nor may "Apache" appear in their names without prior written
+ *    permission of the Apache Group.
+ *
+ * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
+ * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED.  IN NO EVENT SHALL THE APACHE SOFTWARE FOUNDATION OR
+ * ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
+ * USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+ * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
+ * OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ * ====================================================================
+ *
+ * This software consists of voluntary contributions made by many
+ * individuals on behalf of the Apache Software Foundation.  For more
+ * information on the Apache Software Foundation, please see
+ * <http://www.apache.org/>.
+ */
+
+package org.apache.tools.ant;
+
+import org.apache.tools.ant.BuildFileTest;
+
+/**
+ * @author Erik Hatcher
+ */
+public class ImmutableTest extends BuildFileTest { 
+
+    public ImmutableTest(String name) { 
+        super(name);
+    }
+    
+    public void setUp() { 
+        configureProject("src/etc/testcases/core/immutable.xml");
+    }
+    
+    // override allowed on <available>
+    public void test1() { 
+        executeTarget("test1");
+        assertEquals("override", project.getProperty("test"));
+    }
+    
+    // ensure <tstamp>'s new prefix attribute is working
+    public void test2() {
+        executeTarget("test2");
+        assertNotNull(project.getProperty("DSTAMP"));
+        assertNotNull(project.getProperty("start.DSTAMP"));
+    }
+
+    // ensure <tstamp> follows the immutability rule
+    public void test3() {
+        executeTarget("test3");
+        assertEquals("original", project.getProperty("DSTAMP"));
+    }
+
+    // ensure <condition> follows the immutability rule
+    public void test4() {
+        executeTarget("test4");
+        assertEquals("original", project.getProperty("test"));
+    }
+    // ensure <checksum> follows the immutability rule
+    public void test5() {
+        executeTarget("test5");
+        assertEquals("original", project.getProperty("test"));
+    }
+
+    // ensure <exec> follows the immutability rule
+    public void test6() {
+        executeTarget("test6");
+        assertEquals("original", project.getProperty("test1"));
+        assertEquals("original", project.getProperty("test2"));
+    }
+
+    // ensure <pathconvert> follows the immutability rule
+    public void test7() {
+        executeTarget("test7");
+        assertEquals("original", project.getProperty("test"));
+    }
+}
+
